feat: add the auth page

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,4 +1,11 @@
 :root {
+  --ac-primary-400: #42A5F5;
+  --ac-primary-500: #2196F3;
   --bg-primary: #111111;
+  --bg-secondary: #222222;
+  --bg-tertiary: #292929;
   --tx-primary: #F9F9F9;
+
+  --red-500: #F44336;
+
 }
