--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -12,3 +12,14 @@ html, body {
   font-family: var(--font-primary), sans-serif;
   line-height: 1.5;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+input {
+  border: none;
+  outline: none;
+  font: inherit;
+  color: inherit;
+}
